Fix modal overflow

--- a/src/assets/styles/cmps/modals/_dynamic-absolute-modal.scss
+++ b/src/assets/styles/cmps/modals/_dynamic-absolute-modal.scss
@@ -1,6 +1,18 @@
 .dynamic-absolute-modal {
     position: absolute;
     z-index: 30;
+    overflow: initial;
+    text-overflow: initial;
+    white-space: initial;
+
+    p,
+    span {
+        overflow: initial;
+        text-overflow: initial;
+        white-space: initial;
+
+    }
+
 
     //absolute opt
     // .tooltip {
